Adjust a bit the infocenter alignment agani - thanks Ruth for the fix

--- a/themes/default/css/index.css
+++ b/themes/default/css/index.css
@@ -1722,7 +1722,7 @@ dl.settings label {
 	width: 25%;
 }
 .inline {
-	padding: 0 32px;
+	padding: 0 29px;
 	font-size: 0.857em;
 }
 
